--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "twol-site",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://aap9002.github.io/twol-site/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
