--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - "master"
+      - "master" # change to the branch you wish to deploy from
 
 permissions:
   contents: read
@@ -18,4 +18,4 @@ jobs:
     - id: build-publish
       uses: bitovi/github-actions-react-to-ghp@v1.2.0
       with:
-        path: build
+        path: build # change to your build folder
