--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,8 +14,27 @@ jobs:
       name: github-pages
       url: ${{ steps.build-publish.outputs.page_url }}
     runs-on: ubuntu-latest
-    steps:
-    - id: build-publish
-      uses: bitovi/github-actions-react-to-ghp@v1.2.0
+    steps:     
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: 'Build'
+      shell: bash
+      run: |
+        echo "::group::Build"
+        cd client
+        npm ci
+        npm install
+        npm run build
+        echo "::endgroup::"
+
+    - name: 'upload'
+      uses: actions/upload-pages-artifact@v2
+      with: 
+        path: ./client/build
+
+    - id: deploy
+      name: Deploy to GitHub Pages
+      uses: actions/deploy-pages@v1
       with:
-        path: build # change to your build folder
+        token: ${{ github.token }}
