--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,6 @@ jobs:
       shell: bash
       run: |
         echo "::group::Build"
-        cd client
         npm ci
         npm install
         npm run build
@@ -31,7 +30,7 @@ jobs:
     - name: 'upload'
       uses: actions/upload-pages-artifact@v2
       with: 
-        path: ./client/build
+        path: ./build
 
     - id: deploy
       name: Deploy to GitHub Pages
